--- a/index.html
+++ b/index.html
@@ -2106,9 +2106,9 @@
 // PEGA ESTE BLOQUE COMPLETO INMEDIATAMENTE DESPUÉS DE showGameContainer()
 
 // Estas funciones sirven como 'puentes' para el sistema de selección al azar.
-function startGame1_arkanoid() { showGameContainer(1); }
-function startGame2_memory() { showGameContainer(2); }
-function startGame3_matamarcianos() { showGameContainer(3); }
+function startGame1_Arkanoid() { showGameContainer(1); }
+function startGame2_Memory() { showGameContainer(2); }
+function startGame3_Matamarcianos() { showGameContainer(3); }
 function startGame4_donkeykong() { showGameContainer(4); }
 function startGame5_frogger() { showGameContainer(5); }
 function startGame6_pong() { showGameContainer(6); }
@@ -2129,7 +2129,7 @@ function startGame11_Pinball() { showGameContainer(11); }
     { id: 7, name: "Tres en Raya", func: "startGame7_tictactoe", file: "tictactoe.html", container: "tictactoeGameContainer", iframe: "iframe_tictactoe" },
     { id: 8, name: "Asterioides", func: "startGame8_Asterioides", file: "Asterioides.html", container: "AsterioidesGameContainer", iframe: "iframe_Asterioides" },
     { id: 9, name: "Tetris Lite", func: "startGame9_tetris", file: "tetris.html", container: "tetrisGameContainer", iframe: "iframe_tetris" },
-    { id: 10, name: "pacman", func: "startGame10_Pacman", file: "pacman.html", container: "pacmanGameContainer", iframe: "iframe_pacman" },
+    { id: 10, name: "Pacman", func: "startGame10_Pacman", file: "pacman.html", container: "pacmanGameContainer", iframe: "iframe_pacman" },
     { id: 11, name: "Pinball Matemático", func: "startGame11_Pinball", file: "pinball.html", container: "pinballGameContainer", iframe: "iframe_pinball" }
 ];
 
