Fix function names to match game titles

--- a/index.html
+++ b/index.html
@@ -2106,16 +2106,27 @@
 // PEGA ESTE BLOQUE COMPLETO INMEDIATAMENTE DESPUÉS DE showGameContainer()
 
 // Estas funciones sirven como 'puentes' para el sistema de selección al azar.
-function startGame1_Arkanoid() { showGameContainer(1); }
-function startGame2_Memory() { showGameContainer(2); }
-function startGame3_Matamarcianos() { showGameContainer(3); }
+// 1. Arkanoid
+function startGame1_Arkanoid() { showGameContainer(1); } 
+// 2. Juego de Pares
+function startGame2_Memory() { showGameContainer(2); } 
+// 3. Matamarcianos (Este ya funcionaba, lo dejamos igual)
+function startGame3_Matamarcianos() { showGameContainer(3); } 
+// 4. Donkey Kong (Coincide con el array: todo minúsculas)
 function startGame4_donkeykong() { showGameContainer(4); }
+// 5. Frogger (Coincide con el array: todo minúsculas)
 function startGame5_frogger() { showGameContainer(5); }
+// 6. Pong (Coincide con el array: todo minúsculas)
 function startGame6_pong() { showGameContainer(6); }
+// 7. Tres en Raya (Coincide con el array: todo minúsculas)
 function startGame7_tictactoe() { showGameContainer(7); }
-function startGame8_asterioides() { showGameContainer(8); }
+// 8. Asterioides (Corregido: La 'A' debe ser mayúscula)
+function startGame8_Asterioides() { showGameContainer(8); } 
+// 9. Tetris (Coincide con el array: todo minúsculas)
 function startGame9_tetris() { showGameContainer(9); } 
-function startGame10_Pacman() { showGameContainer(10); }
+// 10. Pacman (Corregido: La 'P' debe ser mayúscula)
+function startGame10_Pacman() { showGameContainer(10); } 
+// 11. Pinball (Corregido: La 'P' debe ser mayúscula)
 function startGame11_Pinball() { showGameContainer(11); }
 
 
