--- a/index.html
+++ b/index.html
@@ -2131,17 +2131,17 @@ function startGame11_Pinball() { showGameContainer(11); }
 
 
             const availableGames = [
-    { id: 1, name: "Arkanoid Táctil", func: "startGame1_Arkanoid", file: "arkanoid.html", container: "arkanoidGameContainer", iframe: "iframe_arkanoid" },
-    { id: 2, name: "Juego de Pares", func: "startGame2_Memory", file: "memoria.html", container: "memoryGameContainer", iframe: "iframe_memoria" },
-    { id: 3, name: "Matamarcianos", func: "startGame3_Matamarcianos", file: "matamarcianos.html", container: "matamarcianosGameContainer", iframe: "iframe_matamarcianos" },
+    { id: 1, name: "Arkanoid Táctil", func: "startGame1_Arkanoid", file: "arkanoid.html", container: "ArkanoidGameContainer", iframe: "iframe_arkanoid" },
+    { id: 2, name: "Juego de Pares", func: "startGame2_Memory", file: "memoria.html", container: "MemoryGameContainer", iframe: "iframe_memoria" },
+    { id: 3, name: "Matamarcianos", func: "startGame3_Matamarcianos", file: "matamarcianos.html", container: "MatamarcianosGameContainer", iframe: "iframe_matamarcianos" },
     { id: 4, name: "donkeykong", func: "startGame4_donkeykong", file: "donkeykong.html", container: "donkeykongGameContainer", iframe: "iframe_donkeykong" },
     { id: 5, name: "Juego de la Rana", func: "startGame5_frogger", file: "frogger.html", container: "froggerGameContainer", iframe: "iframe_frogger" },
     { id: 6, name: "Tenis", func: "startGame6_pong", file: "pong.html", container: "pongGameContainer", iframe: "iframe_pong" },
     { id: 7, name: "Tres en Raya", func: "startGame7_tictactoe", file: "tictactoe.html", container: "tictactoeGameContainer", iframe: "iframe_tictactoe" },
-    { id: 8, name: "Asterioides", func: "startGame8_Asterioides", file: "Asterioides.html", container: "AsterioidesGameContainer", iframe: "iframe_Asterioides" },
+    { id: 8, name: "Asterioides", func: "startGame8_Asterioides", file: "asterioides.html", container: "AsterioidesGameContainer", iframe: "iframe_asterioides" },
     { id: 9, name: "Tetris Lite", func: "startGame9_tetris", file: "tetris.html", container: "tetrisGameContainer", iframe: "iframe_tetris" },
-    { id: 10, name: "Pacman", func: "startGame10_Pacman", file: "pacman.html", container: "pacmanGameContainer", iframe: "iframe_pacman" },
-    { id: 11, name: "Pinball Matemático", func: "startGame11_Pinball", file: "pinball.html", container: "pinballGameContainer", iframe: "iframe_pinball" }
+    { id: 10, name: "Pacman", func: "startGame10_Pacman", file: "pacman.html", container: "PacmanGameContainer", iframe: "iframe_pacman" },
+    { id: 11, name: "Pinball Matemático", func: "startGame11_Pinball", file: "pinball.html", container: "PinballGameContainer", iframe: "iframe_pinball" }
 ];
 
         let animationFrameId = null; 
