Fix iframe source path for game loading

--- a/index.html
+++ b/index.html
@@ -2098,7 +2098,7 @@
         const iframe = document.getElementById(selectedGame.iframe);
         if (iframe) {
             // Esto recarga el iframe, asegurando que el juego se reinicia.
-            iframe.src = `juegos/${selectedGame.file}`; 
+           iframe.src = `./juegos/${selectedGame.file}`;
         }
     }
 }
