Update game container IDs and iframe sources

--- a/index.html
+++ b/index.html
@@ -379,59 +379,59 @@
   <p>Has subido al Nivel <span id="rewardLevel"></span>. Tómate un descanso y ¡a jugar!</p>
 </div>
         
-        <div id="arcanoidGameContainer" style="display: none;">
-    <h2>Arcanoid Táctil</h2>
-    <iframe id="iframe_arcanoid" src="juegos/arcanoid.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+        <div id="arkanoidGameContainer" style="display: none;">
+    <h2>Arkanoid Táctil</h2>
+    <iframe id="iframe_arkanoid" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="memoryGameContainer" style="display: none;">
+<div id="memoriaGameContainer" style="display: none;">
     <h2>Juego de Pares</h2>
-    <iframe id="iframe_memoria" src="juegos/memoria.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_memoria" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="matamarcianosGameContainer" style="display: none;">
     <h2>Matamarcianos</h2>
-    <iframe id="iframe_matamarcianos" src="juegos/matamarcianos.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_matamarcianos" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="clicksGameContainer" style="display: none;">
-    <h2>Juego de Clicks</h2>
-    <iframe id="iframe_clicks" src="juegos/clicks.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="donkeykongGameContainer" style="display: none;">
+    <h2>donkeykong</h2>
+    <iframe id="iframe_donkeykong" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="quizGameContainer" style="display: none;">
-    <h2>Quiz Rápido</h2>
-    <iframe id="iframe_quiz" src="juegos/quiz.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="froggerGameContainer" style="display: none;">
+    <h2>Juego de la Rana</h2>
+    <iframe id="iframe_frogger" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="guessGameContainer" style="display: none;">
-    <h2>Adivina la Palabra</h2>
-    <iframe id="iframe_guess" src="juegos/guess.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="pongGameContainer" style="display: none;">
+    <h2>Tenis</h2>
+    <iframe id="iframe_pong" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="flappyGameContainer" style="display: none;">
-    <h2>Flappy Bird Clon</h2>
-    <iframe id="iframe_flappy" src="juegos/flappy.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="tictactoeGameContainer" style="display: none;">
+    <h2>Tres en Raya</h2>
+    <iframe id="iframe_tictactoe" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="snakeGameContainer" style="display: none;">
-    <h2>Serpiente Clásica</h2>
-    <iframe id="iframe_snake" src="juegos/snake.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="asterioidesGameContainer" style="display: none;">
+    <h2>Asterioides</h2>
+    <iframe id="iframe_asterioides" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="tetrisGameContainer" style="display: none;">
     <h2>Tetris Lite</h2>
-    <iframe id="iframe_tetris" src="juegos/tetris.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_tetris" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="raceGameContainer" style="display: none;">
-    <h2>Carrera de Autos</h2>
-    <iframe id="iframe_race" src="juegos/race.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="pacmanGameContainer" style="display: none;">
+    <h2>Pacman</h2>
+    <iframe id="iframe_pacman" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="pinballGameContainer" style="display: none;">
     <h2>Pinball Matemático</h2>
-    <iframe id="iframe_pinball" src="juegos/pinball.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_pinball" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 <div style="margin-top: 20px;">
         <button onclick="endGame()" style="padding: 10px; background-color: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer;">Volver a los Ejercicios</button>
