--- a/index.html
+++ b/index.html
@@ -379,59 +379,59 @@
   <p>Has subido al Nivel <span id="rewardLevel"></span>. Tómate un descanso y ¡a jugar!</p>
 </div>
         
-        <div id="arkanoidGameContainer" style="display: none;">
-    <h2>Arkanoid Táctil</h2>
-    <iframe id="iframe_arkanoid" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+        <div id="arcanoidGameContainer" style="display: none;">
+    <h2>Arcanoid Táctil</h2>
+    <iframe id="iframe_arcanoid" src="juegos/arcanoid.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="memoriaGameContainer" style="display: none;">
+<div id="memoryGameContainer" style="display: none;">
     <h2>Juego de Pares</h2>
-    <iframe id="iframe_memoria" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_memoria" src="juegos/memoria.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="matamarcianosGameContainer" style="display: none;">
     <h2>Matamarcianos</h2>
-    <iframe id="iframe_matamarcianos" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_matamarcianos" src="juegos/matamarcianos.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="donkeykongGameContainer" style="display: none;">
-    <h2>donkeykong</h2>
-    <iframe id="iframe_donkeykong" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="clicksGameContainer" style="display: none;">
+    <h2>Juego de Clicks</h2>
+    <iframe id="iframe_clicks" src="juegos/clicks.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="froggerGameContainer" style="display: none;">
-    <h2>Juego de la Rana</h2>
-    <iframe id="iframe_frogger" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="quizGameContainer" style="display: none;">
+    <h2>Quiz Rápido</h2>
+    <iframe id="iframe_quiz" src="juegos/quiz.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="pongGameContainer" style="display: none;">
-    <h2>Tenis</h2>
-    <iframe id="iframe_pong" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="guessGameContainer" style="display: none;">
+    <h2>Adivina la Palabra</h2>
+    <iframe id="iframe_guess" src="juegos/guess.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="tictactoeGameContainer" style="display: none;">
-    <h2>Tres en Raya</h2>
-    <iframe id="iframe_tictactoe" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="flappyGameContainer" style="display: none;">
+    <h2>Flappy Bird Clon</h2>
+    <iframe id="iframe_flappy" src="juegos/flappy.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="asterioidesGameContainer" style="display: none;">
-    <h2>Asterioides</h2>
-    <iframe id="iframe_asterioides" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="snakeGameContainer" style="display: none;">
+    <h2>Serpiente Clásica</h2>
+    <iframe id="iframe_snake" src="juegos/snake.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="tetrisGameContainer" style="display: none;">
     <h2>Tetris Lite</h2>
-    <iframe id="iframe_tetris" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_tetris" src="juegos/tetris.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
-<div id="pacmanGameContainer" style="display: none;">
-    <h2>Pacman</h2>
-    <iframe id="iframe_pacman" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+<div id="raceGameContainer" style="display: none;">
+    <h2>Carrera de Autos</h2>
+    <iframe id="iframe_race" src="juegos/race.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="pinballGameContainer" style="display: none;">
     <h2>Pinball Matemático</h2>
-    <iframe id="iframe_pinball" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_pinball" src="juegos/pinball.html" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
 </div>
 <div style="margin-top: 20px;">
         <button onclick="endGame()" style="padding: 10px; background-color: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer;">Volver a los Ejercicios</button>
@@ -2090,7 +2090,7 @@
         }
     });
 
-   // 2. Mostrar el contenedor seleccionado y recargar el iframe
+    // 2. Mostrar el contenedor seleccionado y recargar el iframe
     const selectedGame = availableGames.find(g => g.id === gameId);
     if (selectedGame) {
         document.getElementById(selectedGame.container).style.display = 'block';
@@ -2098,7 +2098,7 @@
         const iframe = document.getElementById(selectedGame.iframe);
         if (iframe) {
             // Esto recarga el iframe, asegurando que el juego se reinicia.
-            iframe.src = `./juegos/${selectedGame.file}`;
+            iframe.src = `juegos/${selectedGame.file}`; 
         }
     }
 }
@@ -2106,42 +2106,31 @@
 // PEGA ESTE BLOQUE COMPLETO INMEDIATAMENTE DESPUÉS DE showGameContainer()
 
 // Estas funciones sirven como 'puentes' para el sistema de selección al azar.
-// 1. Arkanoid
-function startGame1_Arkanoid() { showGameContainer(1); } 
-// 2. Juego de Pares
-function startGame2_Memory() { showGameContainer(2); } 
-// 3. Matamarcianos (Este ya funcionaba, lo dejamos igual)
-function startGame3_Matamarcianos() { showGameContainer(3); } 
-// 4. Donkey Kong (Coincide con el array: todo minúsculas)
+function startGame1_Arkanoid() { showGameContainer(1); }
+function startGame2_Memoria() { showGameContainer(2); }
+function startGame3_Matamarcianos() { showGameContainer(3); }
 function startGame4_donkeykong() { showGameContainer(4); }
-// 5. Frogger (Coincide con el array: todo minúsculas)
 function startGame5_frogger() { showGameContainer(5); }
-// 6. Pong (Coincide con el array: todo minúsculas)
 function startGame6_pong() { showGameContainer(6); }
-// 7. Tres en Raya (Coincide con el array: todo minúsculas)
 function startGame7_tictactoe() { showGameContainer(7); }
-// 8. Asterioides (Corregido: La 'A' debe ser mayúscula)
-function startGame8_Asterioides() { showGameContainer(8); } 
-// 9. Tetris (Coincide con el array: todo minúsculas)
+function startGame8_Asterioides() { showGameContainer(8); }
 function startGame9_tetris() { showGameContainer(9); } 
-// 10. Pacman (Corregido: La 'P' debe ser mayúscula)
-function startGame10_Pacman() { showGameContainer(10); } 
-// 11. Pinball (Corregido: La 'P' debe ser mayúscula)
+function startGame10_Pacman() { showGameContainer(10); }
 function startGame11_Pinball() { showGameContainer(11); }
 
 
             const availableGames = [
-    { id: 1, name: "Arkanoid Táctil", func: "startGame1_Arkanoid", file: "arkanoid.html", container: "ArkanoidGameContainer", iframe: "iframe_arkanoid" },
-    { id: 2, name: "Juego de Pares", func: "startGame2_Memory", file: "memoria.html", container: "MemoryGameContainer", iframe: "iframe_memoria" },
-    { id: 3, name: "Matamarcianos", func: "startGame3_Matamarcianos", file: "matamarcianos.html", container: "MatamarcianosGameContainer", iframe: "iframe_matamarcianos" },
+    { id: 1, name: "Arkanoid Táctil", func: "startGame1_Arkanoid", file: "arkanoid.html", container: "arkanoidGameContainer", iframe: "iframe_arkanoid" },
+    { id: 2, name: "Juego de Pares", func: "startGame2_Memoria", file: "memoria.html", container: "memoriaGameContainer", iframe: "iframe_memoria" },
+    { id: 3, name: "Matamarcianos", func: "startGame3_Matamarcianos", file: "matamarcianos.html", container: "matamarcianosGameContainer", iframe: "iframe_matamarcianos" },
     { id: 4, name: "donkeykong", func: "startGame4_donkeykong", file: "donkeykong.html", container: "donkeykongGameContainer", iframe: "iframe_donkeykong" },
     { id: 5, name: "Juego de la Rana", func: "startGame5_frogger", file: "frogger.html", container: "froggerGameContainer", iframe: "iframe_frogger" },
     { id: 6, name: "Tenis", func: "startGame6_pong", file: "pong.html", container: "pongGameContainer", iframe: "iframe_pong" },
     { id: 7, name: "Tres en Raya", func: "startGame7_tictactoe", file: "tictactoe.html", container: "tictactoeGameContainer", iframe: "iframe_tictactoe" },
-    { id: 8, name: "Asterioides", func: "startGame8_Asterioides", file: "asterioides.html", container: "AsterioidesGameContainer", iframe: "iframe_asterioides" },
+    { id: 8, name: "Asterioides", func: "startGame8_Asterioides", file: "asterioides.html", container: "asterioidesGameContainer", iframe: "iframe_asterioides" },
     { id: 9, name: "Tetris Lite", func: "startGame9_tetris", file: "tetris.html", container: "tetrisGameContainer", iframe: "iframe_tetris" },
-    { id: 10, name: "Pacman", func: "startGame10_Pacman", file: "pacman.html", container: "PacmanGameContainer", iframe: "iframe_pacman" },
-    { id: 11, name: "Pinball Matemático", func: "startGame11_Pinball", file: "pinball.html", container: "PinballGameContainer", iframe: "iframe_pinball" }
+    { id: 10, name: "Pacman", func: "startGame10_Pacman", file: "pacman.html", container: "pacmanGameContainer", iframe: "iframe_pacman" },
+    { id: 11, name: "Pinball Matemático", func: "startGame11_Pinball", file: "pinball.html", container: "pinballGameContainer", iframe: "iframe_pinball" }
 ];
 
         let animationFrameId = null; 
