--- a/index.html
+++ b/index.html
@@ -386,42 +386,42 @@
 
 <div id="memoriaGameContainer" style="display: none;">
     <h2>Juego de Pares</h2>
-    <iframe id="iframe_memoria" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_memoria" src="" width="100%" height=800px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="matamarcianosGameContainer" style="display: none;">
     <h2>Matamarcianos</h2>
-    <iframe id="iframe_matamarcianos" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_matamarcianos" src="" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="donkeykongGameContainer" style="display: none;">
     <h2>donkeykong</h2>
-    <iframe id="iframe_donkeykong" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_donkeykong" src="" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="froggerGameContainer" style="display: none;">
     <h2>Juego de la Rana</h2>
-    <iframe id="iframe_frogger" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_frogger" src="" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="pongGameContainer" style="display: none;">
     <h2>Tenis</h2>
-    <iframe id="iframe_pong" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_pong" src="" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="tictactoeGameContainer" style="display: none;">
     <h2>Tres en Raya</h2>
-    <iframe id="iframe_tictactoe" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_tictactoe" src="" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="asterioidesGameContainer" style="display: none;">
     <h2>Asterioides</h2>
-    <iframe id="iframe_asterioides" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_asterioides" src="" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="tetrisGameContainer" style="display: none;">
     <h2>Tetris Lite</h2>
-    <iframe id="iframe_tetris" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_tetris" src="" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div id="pacmanGameContainer" style="display: none;">
@@ -431,7 +431,7 @@
 
 <div id="pinballGameContainer" style="display: none;">
     <h2>Pinball Matemático</h2>
-    <iframe id="iframe_pinball" src="" width="100%" height="500px" frameborder="0" scrolling="no"></iframe>
+    <iframe id="iframe_pinball" src="" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
 </div>
 <div style="margin-top: 20px;">
         <button onclick="endGame()" style="padding: 10px; background-color: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer;">Volver a los Ejercicios</button>
