--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
 <div id="AsteriodesameContainer" class="game-container">
     <h2>Juego de Clicks</h2>
-    <iframe id="iframe_ateroides" src="Asteroides.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_asteroides" src="Asteroides.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 <div id="DonkeykongGameContainer" class="game-container">
