--- a/index.html
+++ b/index.html
@@ -301,52 +301,52 @@
 
 <div id="ArkanoidGameContainer" class="game-container">
     <h2>ArKanoid Táctil</h2>
-    <iframe id="iframe_arkanoid" src="juegos/Arkanoid.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_arkanoid" src="juegos/arkanoid.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 <div id="MemoryGameContainer" class="game-container">
     <h2>Juego de Pares</h2>
-    <iframe id="iframe_memoria" src="juegos/Memoria.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_memoria" src="juegos/memoria.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 <div id="MatamarcianosGameContainer" class="game-container">
     <h2>Matamarcianos</h2>
-    <iframe id="iframe_matamarcianos" src="juegos/Matamarcianos.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_matamarcianos" src="juegos/matamarcianos.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 <div id="AsteriodesameContainer" class="game-container">
     <h2>Juego de Clicks</h2>
-    <iframe id="iframe_asteroides" src="Asteroides.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_asteroides" src="asteroides.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 <div id="DonkeykongGameContainer" class="game-container">
     <h2>Quiz Rápido</h2>
-    <iframe id="iframe_donkeykong" src="juegos/Donkeykong.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_donkeykong" src="juegos/donkeykong.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 <div id="FroggerGameContainer" class="game-container">
     <h2>Adivina la Palabra</h2>
-    <iframe id="iframe_frogger" src="juegos/Frogger.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_frogger" src="juegos/frogger.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 <div id="Pong" class="game-container">
     <h2>Flappy Bird Clon</h2>
-    <iframe id="iframe_pong" src="juegos/Pong.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_pong" src="juegos/pong.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 <div id="TictactoeGameContainer" class="game-container">
     <h2>Serpiente Clásica</h2>
-    <iframe id="iframe_tictactoe" src="juegos/Tictactoe.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_tictactoe" src="juegos/tictactoe.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 <div id="TetrisGameContainer" class="game-container">
     <h2>Tetris Lite</h2>
-    <iframe id="iframe_tetris" src="juegos/Tetris.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_tetris" src="juegos/tetris.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 <div id="PacmanGameContainer" class="game-container">
     <h2>Carrera de Autos</h2>
-    <iframe id="iframe_pacman" src="juegos/Pacman.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe id="iframe_pacman" src="juegos/pacman.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 
 
