--- a/index.html
+++ b/index.html
@@ -301,53 +301,47 @@
 
 <div id="ArkanoidGameContainer" class="game-container">
     <h2>ArKanoid Táctil</h2>
-    <iframe id="iframe_arkanoid" src="juegos/arkanoid.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
-
+<iframe id="iframe_arkanoid" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
 <div id="MemoryGameContainer" class="game-container">
+
     <h2>Juego de Pares</h2>
-    <iframe id="iframe_memoria" src="juegos/memoria.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
-
+<iframe id="iframe_memoria" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
 <div id="MatamarcianosGameContainer" class="game-container">
+
     <h2>Matamarcianos</h2>
-    <iframe id="iframe_matamarcianos" src="juegos/matamarcianos.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
-
+<iframe id="iframe_matamarcianos" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
 <div id="AsteriodesameContainer" class="game-container">
-    <h2>Juego de Clicks</h2>
-    <iframe id="iframe_asteroides" src="asteroides.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
 
+    <h2>Juego de Asteroides</h2>
+<iframe id="iframe_asteroides" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
 <div id="DonkeykongGameContainer" class="game-container">
-    <h2>Quiz Rápido</h2>
-    <iframe id="iframe_donkeykong" src="juegos/donkeykong.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
 
+    <h2>Donkeykong</h2>
+<iframe id="iframe_donkeykong" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
 <div id="FroggerGameContainer" class="game-container">
-    <h2>Adivina la Palabra</h2>
-    <iframe id="iframe_frogger" src="juegos/frogger.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
 
+    <h2>Juego de la Rana</h2>
+<iframe id="iframe_frogger" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
 <div id="Pong" class="game-container">
-    <h2>Flappy Bird Clon</h2>
-    <iframe id="iframe_pong" src="juegos/pong.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
 
+    <h2>Tenis</h2>
+<iframe id="iframe_pong" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
 <div id="TictactoeGameContainer" class="game-container">
-    <h2>Serpiente Clásica</h2>
-    <iframe id="iframe_tictactoe" src="juegos/tictactoe.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
 
+     <h2>Tres en Raya</h2>
+  <iframe id="iframe_tictactoe" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe> 
+  <div id="TictactoeGameContainer" class="game-container">
+    
+   <h2>Tetris Lite</h2>
+<iframe id="iframe_tetris" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
 <div id="TetrisGameContainer" class="game-container">
-    <h2>Tetris Lite</h2>
-    <iframe id="iframe_tetris" src="juegos/tetris.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
+   
 
-<div id="PacmanGameContainer" class="game-container">
-    <h2>Carrera de Autos</h2>
-    <iframe id="iframe_pacman" src="juegos/pacman.html" frameborder="0" scrolling="no" allowfullscreen></iframe>
-</div>
+ <h2>Pacman</h2>
+<div id="PacmanGameContainer" class="game-container">  
+<iframe id="iframe_pacman" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+
 
 
 <div style="margin-top: 20px;">
