--- a/index.html
+++ b/index.html
@@ -299,51 +299,55 @@
     <p>Has subido al Nivel <span id="rewardLevel"></span>. Tómate un descanso y ¡a jugar!</p>
 </div>
 
-<div id="ArkanoidGameContainer" class="game-container">
+<div id="arkanoidGameContainer" class="game-container">
     <h2>ArKanoid Táctil</h2>
-<iframe id="iframe_arkanoid" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
-<div id="MemoryGameContainer" class="game-container">
+    <iframe id="iframe_arkanoid" src="" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div> 
 
+<div id="memoriaGameContainer" class="game-container">
     <h2>Juego de Pares</h2>
-<iframe id="iframe_memoria" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
-<div id="MatamarcianosGameContainer" class="game-container">
+    <iframe id="iframe_memoria" src="" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 
+<div id="matamarcianosGameContainer" class="game-container">
     <h2>Matamarcianos</h2>
-<iframe id="iframe_matamarcianos" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
-<div id="AsteriodesameContainer" class="game-container">
+    <iframe id="iframe_matamarcianos" src="" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 
+<div id="asteroidesGameContainer" class="game-container"> 
     <h2>Juego de Asteroides</h2>
-<iframe id="iframe_asteroides" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
-<div id="DonkeykongGameContainer" class="game-container">
+    <iframe id="iframe_asteroides" src="" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 
+<div id="donkeykongGameContainer" class="game-container">
     <h2>Donkeykong</h2>
-<iframe id="iframe_donkeykong" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
-<div id="FroggerGameContainer" class="game-container">
+    <iframe id="iframe_donkeykong" src="" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 
+<div id="froggerGameContainer" class="game-container">
     <h2>Juego de la Rana</h2>
-<iframe id="iframe_frogger" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
-<div id="Pong" class="game-container">
+    <iframe id="iframe_frogger" src="" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 
+<div id="pongGameContainer" class="game-container"> 
     <h2>Tenis</h2>
-<iframe id="iframe_pong" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
-<div id="TictactoeGameContainer" class="game-container">
+    <iframe id="iframe_pong" src="" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 
-     <h2>Tres en Raya</h2>
-  <iframe id="iframe_tictactoe" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe> 
-  <div id="TictactoeGameContainer" class="game-container">
-    
-   <h2>Tetris Lite</h2>
-<iframe id="iframe_tetris" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
-<div id="TetrisGameContainer" class="game-container">
-   
+<div id="tictactoeGameContainer" class="game-container">
+    <h2>Tres en Raya</h2>
+    <iframe id="iframe_tictactoe" src="" frameborder="0" scrolling="no" allowfullscreen></iframe> 
+</div>
 
- <h2>Pacman</h2>
-<div id="PacmanGameContainer" class="game-container">  
-<iframe id="iframe_pacman" **src=""** frameborder="0" scrolling="no" allowfullscreen></iframe>
+<div id="tetrisGameContainer" class="game-container"> 
+    <h2>Tetris Lite</h2>
+    <iframe id="iframe_tetris" src="" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 
-
-
-
+<div id="pacmanGameContainer" class="game-container"> 
+    <h2>Pacman</h2>
+    <iframe id="iframe_pacman" src="" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 <div style="margin-top: 20px;">
     <button onclick="endGame()" style="padding: 10px; background-color: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer;">Volver a los Ejercicios</button>
 </div>
