--- a/index.html
+++ b/index.html
@@ -2032,16 +2032,17 @@ function startGame10_Pacman() { showGameContainer(10); }
 
 
             const availableGames = [
-        { id: 1, name: "Arkanoid Táctil", func: "startGame1_Arkanoid", file: "Arkanoid.html", container: "arkanoidGameContainer", iframe: "iframe_arkanoid" },
-    { id: 2, name: "Juego de Pares", func: "startGame2_Memoria", file: "Memoria.html", container: "memoriaGameContainer", iframe: "iframe_Memoria" },
-    { id: 3, name: "Matamarcianos", func: "startGame3_Matamarcianos", file: "Matamarcianos.html", container: "matamarcianosGameContainer", iframe: "iframe_matamarcianos" },
-    { id: 4, name: "Donkeykong", func: "startGame4_Donkeykong", file: "Donkeykong.html", container: "donkeykongGameContainer", iframe: "iframe_donkeykong" },
-    { id: 5, name: "Juego de la Rana", func: "startGame5_Frogger", file: "Frogger.html", container: "froggerGameContainer", iframe: "iframe_frogger" },
+           const availableGames = [
+    { id: 1, name: "Arkanoid Táctil", func: "startGame1_Arkanoid", file: "arkanoid.html", container: "arkanoidGameContainer", iframe: "iframe_arkanoid" },
+    { id: 2, name: "Juego de Pares", func: "startGame2_Memoria", file: "memoria.html", container: "memoriaGameContainer", iframe: "iframe_Memoria" },
+    { id: 3, name: "Matamarcianos", func: "startGame3_Matamarcianos", file: "matamarcianos.html", container: "matamarcianosGameContainer", iframe: "iframe_matamarcianos" },
+    { id: 4, name: "Donkeykong", func: "startGame4_Donkeykong", file: "donkeykong.html", container: "donkeykongGameContainer", iframe: "iframe_donkeykong" },
+    { id: 5, name: "Juego de la Rana", func: "startGame5_Frogger", file: "frogger.html", container: "froggerGameContainer", iframe: "iframe_frogger" },
     { id: 6, name: "Tenis", func: "startGame6_pong", file: "pong.html", container: "pongGameContainer", iframe: "iframe_pong" },
-    { id: 7, name: "Tres en Raya", func: "startGame7_Tictactoe", file: "Tictactoe.html", container: "tictactoeGameContainer", iframe: "iframe_tictactoe" },
-    { id: 8, name: "Asterioides", func: "startGame8_Asterioides", file: "Asterioides.html", container: "asterioidesGameContainer", iframe: "iframe_asterioides" },
-    { id: 9, name: "Tetris Lite", func: "startGame9_Tetris", file: "Tetris.html", container: "tetrisGameContainer", iframe: "iframe_tetris" },
-    { id: 10, name: "Pacman", func: "startGame10_Pacman", file: "Pacman.html", container: "pacmanGameContainer", iframe: "iframe_pacman" }
+    { id: 7, name: "Tres en Raya", func: "startGame7_Tictactoe", file: "tictactoe.html", container: "tictactoeGameContainer", iframe: "iframe_tictactoe" },
+    { id: 8, name: "Asterioides", func: "startGame8_Asterioides", file: "asterioides.html", container: "asterioidesGameContainer", iframe: "iframe_asterioides" },
+    { id: 9, name: "Tetris Lite", func: "startGame9_Tetris", file: "tetris.html", container: "tetrisGameContainer", iframe: "iframe_tetris" },
+    { id: 10, name: "Pacman", func: "startGame10_Pacman", file: "pacman.html", container: "pacmanGameContainer", iframe: "iframe_pacman" }
     
 ];
 
