--- a/index.html
+++ b/index.html
@@ -2025,7 +2025,7 @@ function startGame4_Donkeykong() { showGameContainer(4); }
 function startGame5_Frogger() { showGameContainer(5); }
 function startGame6_Pong() { showGameContainer(6); }
 function startGame7_Tictactoe() { showGameContainer(7); }
-function startGame8_Asterioides() { showGameContainer(8); }
+function startGame8_Asteroides() { showGameContainer(8); }
 function startGame9_Tetris() { showGameContainer(9); } 
 function startGame10_Pacman() { showGameContainer(10); }
           
