--- a/index.html
+++ b/index.html
@@ -2031,7 +2031,7 @@ function startGame10_Pacman() { showGameContainer(10); }
           
 const availableGames = [
     { id: 1, name: "Arkanoid Táctil", func: "startGame1_Arkanoid", file: "arkanoid.html", container: "arkanoidGameContainer", iframe: "iframe_arkanoid" },
-    { id: 2, name: "Juego de Pares", func: "startGame2_Memoria", file: "memoria.html", container: "memoriaGameContainer", iframe: "iframe_Memoria" },
+    { id: 2, name: "Juego de Pares", func: "startGame2_Memoria", file: "memoria.html", container: "memoriaGameContainer", iframe: "iframe_memoria" },
     { id: 3, name: "Matamarcianos", func: "startGame3_Matamarcianos", file: "matamarcianos.html", container: "matamarcianosGameContainer", iframe: "iframe_matamarcianos" },
     { id: 4, name: "Donkeykong", func: "startGame4_Donkeykong", file: "donkeykong.html", container: "donkeykongGameContainer", iframe: "iframe_donkeykong" },
     { id: 5, name: "Juego de la Rana", func: "startGame5_Frogger", file: "frogger.html", container: "froggerGameContainer", iframe: "iframe_frogger" },
