--- a/juegos/pacman.html
+++ b/juegos/pacman.html
@@ -34,6 +34,12 @@
             border: 4px solid #1e40af;
             background-color: #000;
         }
+    /* ✅ Estilo responsive para móviles */
+    #gameCanvas {
+      width: 100%;
+      height: auto;
+      max-width: 560px;
+    }
 
         #controls {
             margin-top: 20px;
@@ -476,3 +482,4 @@
     </script>
 </body>
 </html>
+
